fixed: alignment of yt logo

--- a/style.css
+++ b/style.css
@@ -166,6 +166,11 @@ body {
     padding: 0px;
     width: 175px;
     justify-content: space-between;
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 10px;
+    color: #5D6067;
 }
 
 /* To remove default padding  */
@@ -357,6 +362,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 3px;
 }
 
 #channelName {
